# auto_system_core

./: .buckconfig  .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  clangformat.sh  ipc.cpp  ipc.hpp  package-lock.json  read.cpp  run.sh  test_ipc.cpp  write.cpp
.github/workflows/: build-and-test.yml  page-deploy.yml
auto_system_api/: BUCK  CMakeLists.txt
auto_system_api/include/auto_system_api/backend/: ipc_backend.hpp
auto_system_api/src/backend/: ipc_backend.cpp
auto_system_api/test/: BUCK  test_ipc_backend.cpp
docs/: index.md
docs/.vitepress/: config.mts
docs/api/: api.md  api_backend.md  api_backend_ipc.md
